fixing soem small problems

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         
         <!--scripts-->
         <script defer src="anim.js"></script>
+        <script defer src="count-up.js"></script>
 
         <title>STEMBuddies: Empowering Future Innovators</title>
     </head>
