events page update

--- a/about/index.html
+++ b/about/index.html
@@ -39,8 +39,8 @@
 
             <div id="statistics">
                 <div class="stat-block">
-                    <h2 class="stat-number white-outline">01</h2>
-                    <p class="stat-name">event</p>
+                    <h2 class="stat-number white-outline">11</h2>
+                    <p class="stat-name">events</p>
                 </div>
 
                 <div class="stat-block">
@@ -49,8 +49,8 @@
                 </div>
                 
                 <div class="stat-block">
-                    <h2 class="stat-number white-outline">75+</h2>
-                    <p class="stat-name">participants</p>
+                    <h2 class="stat-number white-outline">80+</h2>
+                    <p class="stat-name">mentees</p>
                 </div>
 
             </div>
