--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         </div>
 
         <div id="discord-button-wrapper" class="hidden">
-            <p>Join our Discord for Private 1-on-1 Tutoring!</p>
-            <a href="https://discord.com/invite/kgG2Pquk" target="_blank">
+            <p>Join our Discord for Private 1-on-1 Mentorship!</p>
+            <a href="https://discord.gg/PxQHvUD9xB" target="_blank">
                 <button id="join-discord"> 
                     <img src="/images/homepage/discord_logo.png"/ id="discord-logo">
                     Join Our Discord
@@ -88,11 +88,11 @@
                     <p>Month long drop in tutoring program for university applications and academics</p>
                 </div>
                 <div class="event-card hidden">
-                    <img src="/images/homepage/internship_panel_image.png"/>
+                    <img src="/images/events/internship_panel_image.png"/>
                     <p>Internship panel with speakers who have worked at RBC, WCH, and SickKids</p>
                 </div>
                 <div class="event-card hidden">
-                    <img src="/images/homepage/research_panel_image.png"/>
+                    <img src="/images/events/research_panel_image.png"/>
                     <p>Research panel with undergraduate and high school speakers as well as the SickKids Research Coordinator</p>
                 </div>
             </div>
