--- a/mentorship/index.html
+++ b/mentorship/index.html
@@ -27,7 +27,7 @@
 
         <div class="background turquoise-rectangle">
             <div class="text-box shadow">
-                <h2>Want a Mentor?</h2>
+                <h2>Looking For a Mentor?</h2>
                 
                 <a href="https://discord.com/invite/kgG2Pquk" target="_blank">
                     <button id="join-discord"> 
